--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -3,7 +3,7 @@ name: "Self-Hosted GoReleaser"
 on:
   push:
     branches:
-      - 'sessions-1748529200'
+      - 'pre-v0.0.2'
     tags:
       - "test*"
   release:
