--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -29,7 +29,7 @@ jobs:
       - name: "@Start Clean directory"
         run: |
           echo "deleting workspace"
-          rm -rfv dist build ${{ github.workspace }}/
+          rm -rf dist build ${{ github.workspace }}/
           mkdir -vp ${{ github.workspace }}
 
       - name: "Checkout code"
@@ -69,5 +69,5 @@ jobs:
       - name: "@End Clean directory"
         run: |
           echo "deleting workspace"
-          rm -rfv dist build ${{ github.workspace }}/
+          rm -rf dist build ${{ github.workspace }}/
           mkdir -vp ${{ github.workspace }}
