--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,3 +1,8 @@
+version: 2
+
+project_name: NZBreX
+dist: dist
+
 builds:
   - id: linux
     main: .
@@ -20,7 +25,7 @@ builds:
 
   - id: windows
     main: .
-    binary: NZBreX.exe
+    binary: NZBreX
     goos:
       - windows
     goarch:
@@ -34,20 +39,49 @@ builds:
       - CGO_ENABLED=0
 
 archives:
-  - id: linux
+  - id: unix
     ids: [linux]
     formats: [tar.gz]
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     files:
       - LICENSE*
       - README*
-      - "{{ .Binary }}"
+      - "{{ .ArtifactPath }}"
 
-  - id: windows
+  - id: win
     ids: [windows]
     formats: [zip]
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     files:
       - LICENSE*
       - README*
-      - "{{ .Binary }}"
+      - "{{ .ArtifactPath }}"
+
+checksum:
+  name_template: "checksums.txt"
+
+nfpms:
+  - id: deb
+    formats: [deb]
+    vendor: NZBreX
+    maintainer: "NZBreX <nzbrex@usenet-server.com>"
+    description: "NZBreX - a cmd line tool to re-upload articles missing from providers"
+    homepage: "https://github.com/go-while/NZBreX"
+    license: "MIT"
+    bindir: /usr/bin
+    file_name_template: NZBreX_{{ .Version }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}.deb
+
+release:
+  github:
+    owner: go-while
+    name: NZBreX
+  draft: false
+  prerelease: auto
+
+changelog:
+  sort: asc
+  filters:
+    exclude:
+      - '^docs:'
+      - '^test:'
+  use: github
