try snapshot: version_template

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,7 +1,5 @@
 version: 2
 
-version_template: "{{ if .Tag }}{{ .Tag }}{{ else }}{{ .Branch }}-SNAPSHOT-{{ .ShortCommit }}{{ end }}"
-
 project_name: NZBreX
 dist: dist
 
@@ -72,6 +70,9 @@ nfpms:
     license: "MIT"
     bindir: /usr/bin
     file_name_template: NZBreX_{{ .Version }}-{{ .Os }}-{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}.deb
+
+snapshot:
+  version_template: "{{ if .Tag }}{{ .Tag }}{{ else }}{{ .Branch }}-SNAPSHOT-{{ .ShortCommit }}{{ end }}"
 
 release:
   github:
