--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -3,7 +3,7 @@ name: "TEST Self-Hosted GoReleaser"
 on:
   push:
     branches:
-      - 'v0.0.2-SNAPSHOT-test-1748786444'
+      - 'v0.0.3-testing'
     tags:
       - "test*"
   workflow_dispatch:
