--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -44,6 +44,10 @@ builds:
       - "-s -w -X main.appVersion={{.Version}}"
     env:
       - CGO_ENABLED=1
+      - CC=x86_64-w64-mingw32-gcc
+      - CXX=x86_64-w64-mingw32-g++
+      - GOOS=windows
+      - GOARCH=amd64
 
 archives:
   - id: unix
