--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -342,15 +342,17 @@ jobs:
 
       - name: "compile rapidyenc windows-amd64"
         if: matrix.os == 'windows' && matrix.arch == 'amd64'
-        run: cd rapidyenc && ./crossbuild_rapidyenc_win.sh
-
-      - name: "Set up ARM64 cross-compiler (only for arm64)"
-        if: matrix.goarch == 'arm64'
         run: |
-          echo "CC=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
-          echo "CXX=aarch64-linux-gnu-g++" >> $GITHUB_ENV
+          echo "CC=x86_64-w64-mingw32-gcc" >> $GITHUB_ENV
           echo "CGO_ENABLED=1" >> $GITHUB_ENV
-          echo "$GITHUB_ENV"
+
+      #- name: "Set up ARM64 cross-compiler (only for arm64)"
+      #  if: matrix.goarch == 'arm64'
+      #  run: |
+      #    echo "CC=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
+      #    echo "CXX=aarch64-linux-gnu-g++" >> $GITHUB_ENV
+      #    echo "CGO_ENABLED=1" >> $GITHUB_ENV
+      #    echo "$GITHUB_ENV"
 
       #- name: "Set up Win386 cross-compiler"
       #  if: matrix.goarch == '386' && matrix.os == 'windows'
